--- a/extensions/winrt/_app_service/_app_service.vcxproj
+++ b/extensions/winrt/_app_service/_app_service.vcxproj
@@ -236,7 +236,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\python3\cpython\PCbuild\uwp\pythoncore.vcxproj">
+    <ProjectReference Include="..\..\..\cpython\PCbuild\uwp\pythoncore.vcxproj">
       <Project>{91c36924-3e30-4482-be39-4a780305c187}</Project>
     </ProjectReference>
     <ProjectReference Include="..\_winrt\_winrt.vcxproj">
