--- a/wingpio/_wingpio.vcxproj
+++ b/wingpio/_wingpio.vcxproj
@@ -303,12 +303,12 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\Microsoft.IoT.Lightning.Providers.1.0.0\build\native\Microsoft.IoT.Lightning.Providers.targets" Condition="Exists('..\packages\Microsoft.IoT.Lightning.Providers.1.0.0\build\native\Microsoft.IoT.Lightning.Providers.targets')" />
+    <Import Project="..\packages\Microsoft.IoT.Lightning.1.1.0-alpha\build\native\Microsoft.IoT.Lightning.targets" Condition="Exists('..\packages\Microsoft.IoT.Lightning.1.1.0-alpha\build\native\Microsoft.IoT.Lightning.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.IoT.Lightning.Providers.1.0.0\build\native\Microsoft.IoT.Lightning.Providers.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.IoT.Lightning.Providers.1.0.0\build\native\Microsoft.IoT.Lightning.Providers.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.IoT.Lightning.1.1.0-alpha\build\native\Microsoft.IoT.Lightning.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.IoT.Lightning.1.1.0-alpha\build\native\Microsoft.IoT.Lightning.targets'))" />
   </Target>
 </Project>
