--- a/cpython/PCbuild/openssl.props
+++ b/cpython/PCbuild/openssl.props
@@ -64,8 +64,8 @@
   </Target>
 
   <Target Name="BuildNasmFiles" BeforeTargets="PreBuildEvent" DependsOnTargets="PrepareForBuild;FindNasm" Inputs="@(NasmCompile)" Outputs="@(NasmCompile->'$(IntDir)%(Filename).obj')">
-    <Exec Command='setlocal
-set PATH=$(nasmDir);%PATH%
+    <Exec Command='setlocal %0A
+set PATH=$(nasmDir);%PATH% %0A
 $(nasm) -o "$(IntDir)%(NasmCompile.Filename).obj" "%(NasmCompile.FullPath)"' />
     <ItemGroup>
       <Link Include="$(IntDir)%(NasmCompile.Filename).obj" />
